<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".activities.MainActivity">

    <!-- activity_main.xml -->
    <androidx.cardview.widget.CardView
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_270dp"
        android:backgroundTint="@color/purple_700"
        app:layout_constraintBottom_toTopOf="@id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_250dp">

            <ImageView
                android:layout_width="@dimen/img_140dp"
                android:layout_height="@dimen/img_140dp"
                android:contentDescription="@string/search_widget"
                android:src="@drawable/pokemon2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/heroText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20dp"
                android:text="@string/who_are_you_nlooking_for"
                android:textColor="@color/white"
                android:textSize="@dimen/text_40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/margin_20dp"
                android:layout_marginTop="@dimen/margin_25dp"
                android:layout_marginEnd="@dimen/margin_20dp"
                android:layout_marginBottom="@dimen/margin_15dp"
                android:background="@drawable/search_bar_bg"
                android:iconifiedByDefault="false"
                android:padding="@dimen/padding_5dp"
                android:queryBackground="@android:color/transparent"
                android:queryHint="@string/search_text_pikachu"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/heroText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="@dimen/width_0dp"
        android:layout_height="@dimen/width_0dp"
        android:layout_margin="@dimen/margin_12dp"
        android:layout_marginTop="@dimen/margin_35dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        app:spanCount="2"
        tools:itemCount="10"
        tools:listitem="@layout/row_item" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivInternet"
        android:layout_width="@dimen/width_150dp"
        android:layout_height="@dimen/width_150dp"
        android:contentDescription="@string/internet_icon"
        android:src="@drawable/ic_internet"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvInternet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_internet"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/text_36sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivInternet" />

</androidx.constraintlayout.widget.ConstraintLayout>






